--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -16,7 +16,7 @@
 				--text: #ffffff;
 				--root-font: "Avenir", sans-serif;
 			}
-			
+
 			body {
 				background-color: var(--bg-dark);
 				color: var(--text);
@@ -25,40 +25,40 @@
 				font-weight: 700;
 				-webkit-font-smoothing: antialiased;
 			}
-			
+
 			main {
 				padding: 5vh 10vw;
 				margin: 0 auto;
 				width: 80%;
 			}
-			
+
 			h1 {
 				font-size: 4.5em;
 				font-weight: 500;
 				margin-bottom: 0;
 			}
-			
+
 			p {
 				font-size: 1.6em;
 				font-weight: 300;
 				line-height: 1.4;
 				max-width: 28em;
 			}
-			
+
 			a {
 				white-space: nowrap;
 			}
-			
+
 			#ButtonBlock {
 				display: flex;
 				flex-wrap: wrap;
 				gap: 12px;
 			}
-			
+
 			.accented {
 				color: var(--text-accented);
 			}
-			
+
 			.btn {
 				padding: 12px;
 				color: var(--text);
@@ -66,9 +66,8 @@
 			}
 
 			.opaque {
-				background-color: rgba(251,146,60,.4)
+				background-color: rgba(251, 146, 60, 0.4);
 			}
-			
 		</style>
 	</head>
 	<body>
@@ -78,13 +77,32 @@
 					<header>
 						<h1>Badr Choubai</h1>
 					</header>
-					<p>My name is Badr Choubai. I'm an early-career software developer, interested in solving problems&mdash;Nothing specific yet.</p>
-					<p><span class="accented">Doing what I love to do what I love more: </span>being active and outdoors, enjoying the city I live in and away from my computer</p>
-					<p>I'm opinionated about things and I enjoy watching the World, even if I can't predict the future</p>
+					<p>
+						My name is Badr Choubai. I'm an early-career software
+						developer, interested in solving problems&mdash;Nothing
+						specific yet.
+					</p>
+					<p>
+						<span class="accented"
+							>Doing what I love to do what I love more:
+						</span>being active and outdoors, enjoying the city I
+						live in and away from my computer
+					</p>
+					<p>
+						I'm opinionated about things and I enjoy watching the
+						World, even if I can't predict the future
+					</p>
 				</article>
 				<div id="ButtonBlock">
-					<a class="btn opaque" href="https://www.github.com/BadrChoubai">GitHub</a>
-					<a class="btn opaque" href="https://www.meetup.com/active-after-work/">Active After Work</a>
+					<a
+						class="btn opaque"
+						href="https://www.github.com/BadrChoubai">GitHub</a
+					>
+					<a
+						class="btn opaque"
+						href="https://www.meetup.com/active-after-work/"
+						>Active After Work</a
+					>
 				</div>
 			</section>
 		</main>
