Changes to styling and grammar

--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -27,7 +27,6 @@
 			}
 
 			main {
-				padding: 5vh 10vw;
 				margin: 0 auto;
 				width: 80%;
 			}
@@ -42,7 +41,7 @@
 				font-size: 1.6em;
 				font-weight: 300;
 				line-height: 1.4;
-				max-width: 28em;
+				max-width: 32em;
 			}
 
 			a {
@@ -84,13 +83,13 @@
 					</p>
 					<p>
 						<span class="accented"
-							>Doing what I love to do what I love more:
+							>Doing what I love to do, to do more of what I love:
 						</span>being active and outdoors, enjoying the city I
-						live in and away from my computer
+						live in.
 					</p>
 					<p>
 						I'm opinionated about things and I enjoy watching the
-						World, even if I can't predict the future
+						World, even if I can't predict the future.
 					</p>
 				</article>
 				<div id="ButtonBlock">
