--- a/www/src/index.njk
+++ b/www/src/index.njk
@@ -24,7 +24,7 @@ date: git Last Modified
 	<section>
 		<article>
 			<h2>Posts</h2>
-			<ul>
+			<ul class="posts">
 				{%- for post in collections.posts -%}
 					{% post post.data %}
 				{%- endfor -%}
