--- a/www/src/_includes/css/index.css
+++ b/www/src/_includes/css/index.css
@@ -7,6 +7,7 @@
 
 	--background-color-theme-light: #ffff;
 	--color-theme-light: #121314;
+
 }
 
 /* semantic color variables for this project */
@@ -46,8 +47,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-nav > ul,
-ul {
+nav > ul {
 	list-style-type: none;
 	display: flex;
 	margin: 0;
@@ -74,13 +74,9 @@ nav > ul li a:after {
 	right: -0.1em;
 	bottom: 0;
 	transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
-	background-color: rgba(247, 114, 69, 0.5);
+	background-color: var(--color-accent--shadow);
 }
 
 nav > ul li a:hover:after {
 	top: 0;
-}
-
-ul > li a {
-	color: var(--color-text)
 }
