--- a/www/src/_includes/layouts/default.njk
+++ b/www/src/_includes/layouts/default.njk
@@ -12,6 +12,9 @@
 		{% include "css/post.css" %}
 		{% endif %}
 	</style>
+	{% if css = "post.css" %}
+		<link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+	{% endif %}
 </head>
 <body>
 {{ content | safe }}
