Add nav at bottom of article

--- a/www/src/_includes/layouts/post.njk
+++ b/www/src/_includes/layouts/post.njk
@@ -14,5 +14,13 @@ layout: layouts/default.njk
 		<h1 class="post__article__title">{{ title }}</h1>
 
 		{{ content | safe }}
+
+		<nav style="align-self: end;">
+			<ul>
+				<li>
+					<a href="/">All Posts</a>
+				</li>
+			</ul>
+		</nav>
 	</article>
 </section>
