--- a/www/src/index.njk
+++ b/www/src/index.njk
@@ -25,7 +25,7 @@ date: git Last Modified
 		<article>
 			<h2>Posts</h2>
 			<ul class="posts">
-				{%- for post in collections.posts -%}
+				{%- for post in collections.published -%}
 					{% post post.data %}
 				{%- endfor -%}
 			</ul>
